src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Define 600 weight: */
@font-face {
  font-family: 'NeueMontreal';
  src: url('./fonts/OTNeueMontreal-BoldExtraSqueezed.otf') format('opentype'); 
  font-weight: 600; 
  font-style: normal;
} 

/* Define 400 weight: */
@font-face {
  font-family: 'NeueMontreal';
  src: url('./fonts/OTNeueMontreal-BookSqueezed.otf') format('opentype');
  font-weight: 400; 
  font-style: normal;
}

/* Define SemiBoldExtraSqueezed: */
@font-face {
  font-family: 'NeueMontrealSemiBold';
  src: url('./fonts/OTNeueMontreal-SemiBoldExtraSqueezed.otf') format('opentype');
  font-weight: normal; 
  font-style: normal;
  font-display: swap;
}

/* Define BookSemiSqueezed: */
@font-face {
  font-family: 'NeueMontrealBookSemi';
  src: url('./fonts/OTNeueMontreal-BookSemiSqueezed.otf') format('opentype');
  font-weight: normal; 
  font-style: normal;
  font-display: swap;
}

/* Ensure SemiBoldExtraSqueezed is used for case titles */
.font-neue-semibold {
  font-family: 'NeueMontrealSemiBold', sans-serif !important;
}

/* Ensure BookSemiSqueezed is used for body copy */
.font-neue-book-semi {
  font-family: 'NeueMontrealBookSemi', sans-serif !important;
}

